Fix some layout issues and add chart package

--- a/client/includes/header.css
+++ b/client/includes/header.css
@@ -1,9 +1,6 @@
-#headdatatemp {
-    width: 402px;
-    height: 20px;
+#headdata {
+
     display: block;
-    margin-left: 10px;
-    margin-top: 5px;
 }
 
 #yield {
